1. sửa đổi lần 1 thêm about.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Tự học dự án 4</h1>
+    <h2>Sửa đổi lần 1</h2>
+    <h2>Sửa đổi lần 2</h2>
+    <h2>Sửa đổi lần 3</h2>
   </body>
 </html>
